@@ -3,22 +3,23 @@
 use warnings;
 use strict;
 
-use Test::More tests => 16;
+use Test::More tests => 23;
 
 BEGIN {
     use_ok( 'WWW::Mechanize::Link' );
 }
 
-my $link = WWW::Mechanize::Link->new( "url.html", "text", "name", "frame", "http://base.example.com/" );
+my $link = WWW::Mechanize::Link->new( "url.html", "text", "name", "frame", "http://base.example.com/", "alt text" );
 isa_ok( $link, 'WWW::Mechanize::Link' );
-is( scalar @$link, 5, "Should have five elements" );
+is( scalar @$link, 6, "Should have five elements" );
 
 # Test the new-style accessors
-is( $link->url, "url.html", "url works" );
-is( $link->text, "text", "text works" );
-is( $link->name, "name", "name works" );
-is( $link->tag, "frame", "frame works" );
-is( $link->base, "http://base.example.com/", "base works" );
+is( $link->url, "url.html", "url() works" );
+is( $link->text, "text", "text() works" );
+is( $link->name, "name", "name() works" );
+is( $link->tag, "frame", "tag() works" );
+is( $link->base, "http://base.example.com/", "base() works" );
+is( $link->alt, "alt text", "alt() works" );
 
 # Order of the parms in the blessed array is important for backwards
 # compatibility.
@@ -32,3 +33,19 @@ my $URI = $link->URI;
 isa_ok( $URI, "URI::URL", "URI is proper type" );
 is( $URI->rel, "url.html", "Short form of the url" );
 is( $link->url_abs, "http://base.example.com/url.html", "url_abs works" );
+
+# test new style API
+$link = WWW::Mechanize::Link->new({
+	url => 'url.html',
+	text => "text",
+	name => "name",
+	tag =>  "frame",
+	base => "http://base.example.com/",
+	alt	 => "alt text",
+ });
+is( $link->url, "url.html", "url() works" );
+is( $link->text, "text", "text() works" );
+is( $link->name, "name", "name() works" );
+is( $link->tag, "frame", "tag() works" );
+is( $link->base, "http://base.example.com/", "base() works" );
+is( $link->alt, "alt text", "alt() works" );
